# ai-devsecops-toolkit

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  buf.gen.rust.yaml  buf.yaml
.depbot/: tools.yaml
.skills/demo/: SKILL.md
.skills/depbot/: SKILL.md  bazel.md  bsr.md  coupled-deps.md  dep-comments.md  go-modules.md  grouping.md  npm.md  pr-style.md
api/: BUILD.bazel
api/ai-agent-kit/v1/: BUILD.bazel  agent.proto  fs_tools.proto  llm.proto  shell_tools.proto  skills.proto  tools.proto
api/depbot/v1/: BUILD.bazel  doctor.proto  tools.proto
bazel/: buf.bzl
rust/ai-agent/: BUILD.bazel  Cargo.toml
rust/ai-agent-kit/: BUILD.bazel  Cargo.toml
rust/ai-agent-kit/examples/: nvidia_smoke.rs
rust/ai-agent-kit/src/: agent.rs  fs_tools.rs  lib.rs  llm.rs  observe.rs  shell_tools.rs  skills.rs  tools.rs
rust/ai-agent/src/: main.rs
rust/api/: BUILD.bazel  Cargo.toml
rust/api/src/: lib.rs
rust/depbot/: Cargo.toml
rust/depbot/src/: config.rs  doctor.rs  lib.rs
