[workspace]
resolver = "2"
members = [
    "rust/api",
    "rust/ai-agent-kit",
    "rust/ai-agent",
    "rust/depbot",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
publish = false

[workspace.dependencies]
api = { path = "rust/api" }
# depbot: hold =0.8.1 — bump to =0.9.0 when buffa 0.9 is released and the BSR
# anthropics/buffa plugin / codegen in this repo are aligned (features: std, fast-utf8, json).
buffa = { version = "=0.8.1", default-features = false, features = [
    "std",
    "fast-utf8",
    "json",
] }
# Keep in lockstep with workspace `buffa` (WKT Duration/Timestamp for codegen).
buffa-types = { version = "=0.8.1", default-features = false, features = [
    "std",
    "json",
] }
clap = { version = "4.5.60", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1.0.229", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.19"
tokio = { version = "1.50.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
