[workspace]
resolver = "2"
members = [
    "rust/api",
    "rust/ai-agent-kit",
    "rust/ai-agent",
    "rust/depbot",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.1"
publish = false

[workspace.dependencies]
api = { path = "rust/api" }
# depbot: bundle buffa-codegen
# depbot: hold =0.8.1 — bump bundle to 0.9.x when ALL unlock (coupled-deps.md):
#   - crates.io: buffa, buffa-types @ 0.9.0
#   - GitHub: anthropics/buffa release v0.9.0
#   - BSR remote: buf.build/anthropics/buffa:v0.9.0 (tag must exist; GitHub alone is NOT enough)
buffa = { version = "=0.8.1", default-features = false, features = [
    "std",
    "fast-utf8",
    "json",
] }
# depbot: bundle buffa-codegen — member: buffa-types (same version family as buffa)
buffa-types = { version = "=0.8.1", default-features = false, features = [
    "std",
    "json",
] }
clap = { version = "4.5.60", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }
serde = { version = "1.0.229", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.19"
tokio = { version = "1.50.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
