[package]
name = "ai-agent-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "AI agent runtime kit (skills, tools, LLM loop)"

[lib]
path = "src/lib.rs"
name = "ai_agent_kit"

[dependencies]
api = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "nvidia_smoke"
path = "examples/nvidia_smoke.rs"
required-features = []
