[package]
name = "depbot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Depbot product helpers (YAML tools config → protobuf → ai-agent-kit)"

[lib]
path = "src/lib.rs"
name = "depbot"

[dependencies]
api = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
