load("//bazel:buf.bzl", "buf_lint_test", "buf_module")

# depbot product API — stays in this toolkit; not part of ai-agent-kit.
# Monorepo codegen: bazel run //api:generate
# Depbot-only lint: bazel test //api/depbot/v1:lint

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
)

buf_module(
    name = "module",
    srcs = [":protos"],
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "lint",
    size = "small",
    module = ":module",
)
